@@ -252,7 +252,6 @@
     <string name="user_prop_title_userid">Идентификатор пользователя:</string>
     <string name="user_prop_title_statusmsg">Сообщение о Состоянии:</string>
     <string name="user_prop_title_clientname">Имя клиента:</string>
-    <string name="user_prop_clientversion">версия</string>
     <string name="user_prop_title_ipaddress">IP Адрес:</string>
     <string name="user_prop_title_voice_volume">Громкость Голоса</string>
     <string name="user_prop_title_mute_voice">Выключить Голос</string>
