@@ -257,7 +257,6 @@
     <string name="user_prop_title_userid">用户ID：</string>
     <string name="user_prop_title_statusmsg">状态消息：</string>
     <string name="user_prop_title_clientname">客户端名称：</string>
-    <string name="user_prop_clientversion">版本</string>
     <string name="user_prop_title_ipaddress">IP地址：</string>
     <string name="user_prop_title_voice_volume">语音音量</string>
     <string name="user_prop_title_mute_voice">语音静音</string>
