@@ -257,7 +257,6 @@
     <string name="user_prop_title_userid">User ID:</string>
     <string name="user_prop_title_statusmsg">Status Message:</string>
     <string name="user_prop_title_clientname">Client Name:</string>
-    <string name="user_prop_clientversion">version</string>
     <string name="user_prop_title_ipaddress">IP Address:</string>
     <string name="user_prop_title_voice_volume">Voice Volume</string>
     <string name="user_prop_title_mute_voice">Mute Voice</string>
